FLOW/www/css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

* {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	/* make transparent link selection, adjust last value opacity 0 to 1.0 */
	-moz-user-select: none;
	-webkit-user-select: none;
	user-select: none;
}

::-webkit-scrollbar {
	display: none;
}

*:focus {
	outline: none;
}

body {
	-webkit-touch-callout: none;
	-webkit-text-size-adjust: none;
	-webkit-user-select: none;
	background-color: #e4e4e4;
	font-size: 12px;
	height: 100%;
	margin: 0px;
	padding: 0px;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
}

input,
textarea {
	-moz-user-select: auto !important;
	-webkit-user-select: auto !important;
	user-select: auto !important;
}

.ftop_bar {
	position: absolute !important;
	top: calc(0px - var(--custom-vh2)) !important;
	/* height: calc(19 * var(--custom-vh)) !important; */
	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}

.toolbar {
	height: calc(7 * var(--custom-vh) + 15px) !important;
	box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
}

.fnav-btn {
	position: absolute;
	width: 10vw;
	height: calc(4 * var(--custom-vh));
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
	overflow: inherit !important;
}

.fhome-btn {
	background-image: url("../src/icons/Home@3x.png");
}

.fexplore-btn {
	background-image: url("../src/icons/Explore@3x.png");
}

.fmessages-btn {
	background-image: url("../src/icons/Messages@3x.png");
}

.fnotif-btn {
	background-image: url("../src/icons/Notifications@3x.png");
}

/* .fflow-btn {
    margin-top: -5vh !important;
    height: 15vh !important;
    width: 25vw !important;
    background-image: url("../src/icons/FLOW@3x.png");
    transition-duration: 1s;
} */
.f_in_app_notif {
	position: absolute;
	width: 85vw;
	margin-left: 7.5vw;
	height: auto;
	line-height: calc(7 * var(--custom-vh));
	margin-top: 5vw;
	background-color: #fff;
	border-radius: 2vw;
	box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
	text-align: center;
	transition-duration: 0.4s;
	z-index: 9999;
}

.flabel_in_app_notif {
	font-size: 4.2vw;
	color: #FFF;
	font-family: 'Roboto-Regular';
}

.fflow-btn {
	position: relative;
	display: block;
	margin-top: calc(-5 * var(--custom-vh)) !important;
	height: calc(10 * var(--custom-vh)) !important;
	width: calc(10 * var(--custom-vh)) !important;

	border-radius: 100%;
	/* background: url("../src/icons/Record.png") no-repeat 4vh 4vh;linear-gradient(#1A84EF, #FF0054); */
	background: url("../src/icons/Record.png") center center/3.5vh no-repeat,
		linear-gradient(#1a84ef, #ff0054);
	z-index: 10;

	/* background-size: 4vh;
    background-position: center;
    background-repeat: no-repeat; */
}

.flow-btn-shadow {
	position: absolute;
	display: block;
	height: calc(10 * var(--custom-vh)) !important;
	width: calc(10 * var(--custom-vh)) !important;
	left: calc(50vw - (5 * var(--custom-vh)));
	bottom: calc(2 * var(--custom-vh));
	border-radius: 100%;
	background: linear-gradient(#1a84ef, #ff0054);
	filter: blur(10px);
	opacity: 0.8 !important;
	z-index: 5;
}

.fflow-btn:active {
	filter: brightness(120%);
}

.fnav-btn.tab-link.active {
	filter: brightness(70%) saturate(1000%) hue-rotate(140deg);
}

#tab1,
#tab2 {
	padding-top: calc(19 * var(--custom-vh));
	padding-bottom: calc(7 * var(--custom-vh)) !important;
}

#tab3,
#tab4 {
	padding-top: 0px !important;
}

ul {
	list-style-type: none;
}

#div_new_features_background {
	background-color: rgba(0, 0, 0, 0.4);
	width: 100vw;
	position: absolute;
	height: calc(100 * var(--custom-vh));
	z-index: 999;
	display: none;
}

#div_new_features {
	position: absolute;
	width: 80vw;
	height: calc(50 * var(--custom-vh));
	background-color: #fff;
	z-index: 999;
	top: calc(25 * var(--custom-vh));
	left: 10vw;
	border-radius: 5px;
	box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
	text-align: center;
	display: none;
}

#title_div_new_features {
	font-size: 20px;
	font-weight: 600;
	top: calc(2 * var(--custom-vh));
	position: relative;
}

#paragraphe_div_new_feature {
	position: relative;
	top: 0vh;
	left: 5vw;
	vertical-align: middle;
	display: table-cell;
	height: calc(40 * var(--custom-vh));
	width: 70vw;
	font-size: 13px;
	margin: 0;
}

#paragraphe_div_new_feature>.img1 {
	padding-top: 5px;
	padding-bottom: 10px;
	height: 9vh;
	width: 100%;
	object-fit: contain;
}

#paragraphe_div_new_feature>.img2 {
	padding-top: 5px;
	padding-bottom: 10px;
	height: 4vh;
	width: 60%;
	object-fit: contain;
}

#close_div_new_features {
	position: absolute;
	width: 60vw;
	height: calc(5 * var(--custom-vh));
	background-color: #1a84ef;
	left: 10vw;
	border-radius: calc(5 * var(--custom-vh));
	opacity: 0.5;
	pointer-events: none;
	transition-duration: 0.4s;
	bottom: calc(3 * var(--custom-vh));
}

#border_close_div_new_features {
	position: absolute;
	width: 100%;
	height: calc(4 * var(--custom-vh));
	align-items: center;
	text-align: center;
	line-height: calc(4.5 * var(--custom-vh));
	border-radius: 5px;
	transition-duration: 0.5s;
	color: #fff;
	font-weight: bold;
}


/* --------- RIPPLE ----------- */

.fripple::after {
	filter: hue-rotate(-140deg) !important;
	-webkit-animation: click-wave 0.65s;
	-moz-animation: click-wave 0.65s;
	animation: click-wave 0.65s;
	background: #ff0061;
	content: "";
	display: block;
	z-index: 100;
	border-radius: 50%;
}

@keyframes click-wave {
	0% {
		margin-top: -2vw;
		height: 10vw;
		width: 10vw;
		opacity: 0.15;
	}

	100% {
		height: 20vw;
		width: 20vw;
		margin-left: -5vw;
		margin-top: -7vw;
		/* margin-left: -80px;
        margin-top: -80px; */
		opacity: 0;
	}
}

/* for iOS device */
@supports (-webkit-touch-callout: none) {
	.fnav-btn {
		/* height: calc(4 * var(--custom-vh) + 25px); */
	}

	.fhome-btn,
	.fexplore-btn,
	.fmessages-btn,
	.fnotif-btn {
		background-size: 70%;
		height: calc(4 * var(--custom-vh) + 25px);
	}

	.flow-btn-shadow {
		height: calc(9 * var(--custom-vh)) !important;
		width: calc(9 * var(--custom-vh)) !important;
		left: calc(50vw - 4.5vh);
		bottom: calc(2 * var(--custom-vh));
	}

	.fflow-btn {
		height: calc(9 * var(--custom-vh)) !important;
		width: calc(9 * var(--custom-vh)) !important;
	}

	.framework7-root,
	body,
	html {
		height: calc(100 * var(--custom-vh)) !important;
	}

	#close_div_new_features {
		bottom: calc(3 * var(--custom-vh));
	}
}

/* @media (max-height: 700px) { */
.mobile700 .fflow-btn {
	margin-top: calc(-6* var(--custom-vh)) !important;
	height: calc(12*var(--custom-vh)) !important;
	width: calc(12* var(--custom-vh)) !important;
}

.mobile700 .flow-btn-shadow {
	height: calc(12 * var(--custom-vh)) !important;
	width: calc(12 * var(--custom-vh)) !important;
	left: calc(50vw - (6 * var(--custom-vh)));
	bottom: calc(1.5 * var(--custom-vh));
}

/* } */

/*
///////////////////////////////////////////
///////////////////////////////////////////
///////////////////////////////////////////
//////////// WITHOUT FRAMEWORK7 ///////////
///////////////////////////////////////////
///////////////////////////////////////////
///////////////////////////////////////////
*/
.app_parent {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
}

.swiper-container {
	width: 100%;
	height: 100%;
	/* background: red; */
}

/* .swiper-slide {
	text-align: center;
	font-size: 18px;

	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	-webkit-justify-content: center;
	justify-content: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	-webkit-align-items: center;
	align-items: center;
} */

.main_pages {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: calc(93 * var(--custom-vh));
	background: #e4e4e4;
}

.main_navbar {
	position: absolute;
	top: calc(93*var(--custom-vh));
	left: 0;
	width: 100vw;
	height: calc(7*var(--custom-vh));
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
	background-color: #f7f7f8;
	z-index: 2;
}

.navbtn {
	/* border: 1px solid black; */
	background-position: center;
	background-size: 50%;
	background-repeat: no-repeat;
	flex-grow: 1;
}

.navbtn.home_btn {
	background-image: url("../src/icons/Home.png");
}

.navbtn.explore_btn {
	background-image: url("../src/icons/Explore.png");
}

.navbtn.flow_btn {
	flex-grow: 1.2;
}

.navbtn.active {
	filter: brightness(70%) saturate(1000%) hue-rotate(140deg);
}

.flow_btn>.flow_btn_img {
	position: absolute;
	display: block;
	height: calc(10 * var(--custom-vh)) !important;
	width: calc(10 * var(--custom-vh)) !important;
	left: calc(50vw - (5 * var(--custom-vh)));
	bottom: calc(2 * var(--custom-vh));

	border-radius: 100%;
	/* background: url("../src/icons/Record.png") no-repeat 4vh 4vh;linear-gradient(#1A84EF, #FF0054); */
	background: url("../src/icons/Record.png") center center/3.5vh no-repeat,
		linear-gradient(#1a84ef, #ff0054);
	z-index: 10;
}

.flow_btn>.flow_btn_shadow {
	position: absolute;
	display: block;
	height: calc(10 * var(--custom-vh)) !important;
	width: calc(10 * var(--custom-vh)) !important;
	left: calc(50vw - (5 * var(--custom-vh)));
	bottom: calc(2 * var(--custom-vh));
	border-radius: 100%;
	background: linear-gradient(#1a84ef, #ff0054);
	filter: blur(10px);
	opacity: 0.8 !important;
	z-index: 5;
}

.navbtn.messages_btn {
	background-image: url("../src/icons/Messages.png");
}

.navbtn.notifications_btn {
	background-image: url("../src/icons/Notifications.png");
}

.main_topbar {
	position: absolute;
	top: 0px;
	height: calc(19 * var(--custom-vh));
	width: 100vw;
	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
	background-color: #f7f7f8;
	z-index: 2;
	transition-duration: 0.3s;
	transform: translate3d(0, 0, 0);
	/* display: none; */
}

.home_parent {
	padding-top: calc(19 * var(--custom-vh));
	transition: transform 0.5s;
}

